--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,34 @@
 .env
 venv/
+tunesmith/
 __pycache__/
 *.pyc
 *.pyo
 *.pyd
 *.pyw
 flask_session/
+
+# Kubernetes secrets with actual values
+kubernetes/secrets-*.yaml
+
+# Local configuration
+*.local.yaml
+*.local.yml
+
+# Logs
+*.log
+
+# IDE specific files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
